# PythonAISynth

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _version.py  env.yml  environment.yml  index.html  main.py  mkdocs.yml  model.h5  new_conda_env.yml  pre_release.yml  requirements.txt  requirements_venv.txt  requirements_windows.txt  setup.py
.github/: dependabot.yml
.github/workflows/: dayly_build.yml  main.yml  pre_release.yml
audio_stuff/audio/: scipy_test.py
audio_stuff/midi/: fuer_elise.py  midi_piano.py  midi_win_test.py  mido_test_in.py  mido_test_microsoft.py  mido_test_out.py  pygame_find_channel.py  stream_file.py
audio_stuff/pygame_audio/: audio_20_sinewave_test.py  pygame_example.py
audio_stuff/sounddevice_pyaudio/: audio_channel.py  audio_channel_test.py  audio_list_channel.py  audio_virt_device_test.py
audio_test/: audio_callback.pyx  audio_test.py  context.py  fourier_nn_template.pxd
cpp_synth/: CMakeLists.txt
cpp_synth/include/: SoundPlayer.h
cpp_synth/src/: SoundPlayer.cpp  main.cpp  tf_test.cpp
cython/audio_test/: audio_callback.pyx  audio_test.py  setup.py
cython/audio_test_v2/: audio.pyx  context.py  setup.py
docs/: how_to_use.md  howtobuild.md  idea.md  index.md
docs/how_to_use/: basics.md  model_params.md
example_nets/: custom1.h5  custom2.h5  linear.h5  sigmoid.h5
how_to_use/: index.html
how_to_use/basics/: index.html
how_to_use/model_params/: index.html
idea/: index.html
javascripts/: katex.js
midi_stuff/: midi_piano.py  mido_test_in.py  mido_test_out.py  mido_test_ports.py
python_modules/fourier_neural_network/: index.html
python_modules/fourier_neural_network_gui/: index.html
python_modules/graph_canvas/: index.html
python_modules/graph_canvas_v2/: index.html
python_modules/main/: index.html
python_modules/music/: index.html
python_modules/overview/: index.html
python_modules/predefined_functions/: index.html
python_modules/simple_input_dialog/: index.html
python_modules/synth_gui/: index.html
pythonaisynth/: fourier_neural_network.py  fourier_neural_network_gui.py  fuer_elise.py  graph_canvas.py  graph_canvas_v2.py  main.py  music.py  predefined_functions.py  simple_input_dialog.py  std_redirect.py  synth_gui.py  utils.py
scr/: fourier_neural_network.py  fourier_neural_network_gui.py  graph_canvas.py  graph_canvas_v2.py  music.py  not_used.simple_input_dialog.py.txt  predefined_functions.py  simple_input_dialog.py  std_redirect.py  subprocess_fourier_nn.py  torch_model.py  utils.py
search/: search_index.json
src/: fourier_neural_network.py  fourier_neural_network_gui.py  graph_canvas.py  graph_canvas_v2.py  music.py  predefined_functions.py  std_redirect.py  utils.py
tests/: adaptive_fourier_degree.py  ahhhhhh_stupid_bug_when_closing_test.py  context.py  fourier_layer_torch_test.py  fourier_nn_audio_test.py  fourier_nn_test.py  fourier_nn_test_live_func_view.py  fourier_nn_torch_test.py  fourier_regression_model.py  fouriernn_manual_test.py  fouriernn_parralel_test.py  fouriernn_test.py  frequency_checker_test.py  graph_canvas_test.py  profiling.py  test_model_behavior.py
(+9 files in other folders)
